fixed text-align mistake

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,8 @@ header {
   font-size: xx-large;
 }
 
-
+h3,
+p,
 .search {
   color: lightslategrey;
   font-family: Arial, Helvetica, sans-serif;
@@ -33,6 +34,7 @@ button {
 button {
   border-radius: 15px;
   padding: 10px;
+  color: white;
   background: #6394ed;
   transition: 0.1s ease-in-out;
 }
